js changed to mjs

--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "telecord",
   "version": "1.0.0",
   "description": "Export Discord chat from JSON to Telegram via CLI",
-  "main": "telecord.js",
+  "main": "telecord.mjs",
   "bin": {
-    "telecord": "./telecord.js"
+    "telecord": "./telecord.mjs"
   },
-  "type": "module",
   "dependencies": {
     "axios": "^1.8.4",
     "cli-progress": "^3.12.0",
