--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "telecord",
   "version": "1.0.0",
-  "description": "Export Discord chat from JSON to Telegram via CLI",
-  "main": "telecord.mjs",
+  "description": "Export Discord chats (with media) to Telegram.",
   "bin": {
-    "telecord": "./telecord.mjs"
+    "telecord": "./bin/telecord.mjs"
+  },
+  "type": "module",
+  "scripts": {
+    "start": "node ./bin/telecord.mjs"
   },
   "dependencies": {
-    "axios": "^1.8.4",
-    "cli-progress": "^3.12.0",
     "commander": "^11.0.0",
-    "form-data": "^4.0.2",
-    "inquirer": "^12.6.0",
-    "mime-types": "^3.0.1",
-    "node-fetch": "^3.3.2",
-    "yargs": "^17.7.2"
-  }
+    "inquirer": "^9.0.0"
+  },
+  "author": "Vinay",
+  "license": "MIT"
 }
