--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "converter"
   ],
   "dependencies": {
-    "commander": "^11.0.0",
-    "inquirer": "^9.0.0"
+    "axios": "^1.9.0",
+    "cli-progress": "^3.12.0",
+    "commander": "^11.1.0",
+    "form-data": "^4.0.2",
+    "inquirer": "^9.0.0",
+    "mime-types": "^3.0.1"
   },
   "author": "Vinay",
   "license": "MIT"
